2005-03-01  Alan Modra  <amodra@bigpond.net.au>

	* targets.h: Typo fix.
	* bfd-in2.h: Regenerate.

	* bout.c (b_out_write_object_contents): Don't use sizeof on host
	structs to size on-disk structures.
	(b_out_set_section_contents): Size the external struct, not the
	internal one for on-disk size.
	(b_out_sizeof_headers): Likewise.

2005-03-01  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (ppc64_elf_size_stubs): Override defined dot-sym
	entry points with the func descriptor as well as undefweak.

2005-02-28  Ross Ridge  <rridge@csclub.uwaterloo.ca>

	* peicode.h (pe_ILF_build_a_bfd): Do not assume that an @ will be
	present when IMPORT_NAME_UNDOECRATE is used.

2005-02-28  H.J. Lu  <hongjiu.lu@intel.com>

	PR 757
	* elf-bfd.h (_bfd_elf_merge_symbol): Add a pointer to unsigned
	int.

	* elf32-sh-symbian.c (sh_symbian_relocate_section): Pass NULL
	to _bfd_elf_merge_symbol.

	* elflink.c (_bfd_elf_merge_symbol): Use the pointer to
	unsigned int to return the alignment of the old common symbol
	in the dynamic object.
	(_bfd_elf_add_default_symbol): Pass NULL to
	_bfd_elf_merge_symbol.
	(elf_link_add_object_symbols): Pass &old_alignment to
	_bfd_elf_merge_symbol. Get the alignment of the new common
	symbol in the dynamic object.

2005-02-24  Ben Elliston  <bje@au.ibm.com>

	* coffcode.h (coff_sym_filepos): Remove GNU960 conditional code.
	* format.c (bfd_check_format_matches): Likewise.
	* archive.c (BFD_GNU960_ARMAG): Likewise.
	(bfd_generic_archive_p): Likewise.
	(_bfd_write_archive_contents): Likewise.

2005-02-24  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.in: (AM_INIT_AUTOMAKE): Set version to 2.15.95.
	* configure: Regenerate.

2005-02-24  Julian Brown  <julian@sirius.codesourcery.com>

	* elflink.c (elf_link_add_object_symbols): Force symbols in discarded
	COMDAT group sections to have default visibility.

2005-02-24  Alan Modra  <amodra@bigpond.net.au>

	* coffcode.h (coff_print_aux): Warning fix.